# temple-python-public

./: .gitignore  Makefile  README.rst  circle.yml  cookiecutter.json  deploy.py  setup.cfg  test_deploy.py  test_requirements.txt
.circleci/: config.yml
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .pylintrc  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  circle.yml  deploy.py  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: __init__.py
