[metadata]
name = {{cookiecutter.repo_name}}
author = Clover Health
author-email = dev@cloverhealth.com
summary = {{cookiecutter.short_description}}
description-file = README.rst
home-page = https://github.com/CloverHealth/{{cookiecutter.repo_name}}
python-requires = >=3.4
license = BSD 3-Clause
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = {{cookiecutter.module_name}}

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Dont cover definsive assertion code
    raise AssertionError
    raise NotImplementedError

    # Lexical noop
    pass
show_missing = 1
fail_under = 100

[files]
packages = {{cookiecutter.module_name}}

[flake8]
select =
    B,
    B90,
    C,
    E,
    F,
    G,
    W
application-import-names = {{cookiecutter.module_name}},tests
import-order-style = google
max-complexity = 10
max-line-length = 99

[pylint]
# Pylint rules are defined in .pylintrc since it has no setup.cfg configuration

[tool:pytest]
xfail_strict = true
